# OpenGL-Project

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: SIB.c  SIB.h  glad.c  main.c  shader.c  shader.h
